# eigen-cuda-example

./: .gitignore  CMakeLists.txt  EigenCudaExampleOptions.cmake.sample  LICENSE  README.md
.github/workflows/: continuous.yml
cmake/eigen_cuda_example/: eigen_cuda_example_target_link_system_libraries.cmake  eigen_cuda_example_warnings.cmake
cmake/recipes/: catch2.cmake  spdlog.cmake
src/: example.cu  example.h
tests/: CMakeLists.txt  benchmark.cpp  test.cpp  utils.cpp  utils.hpp
